@@ -8,6 +8,9 @@
 # executing it with Ruby interpreter. (It does nothing - just initializes
 # a simple data structure and ends without any action - unless you add some,
 # of course)
+#
+# DON'T MODIFY THIS, CREATE YOUR OWN USER'S CONFIGURATION FILE INSTEAD,
+# AS DESCRIBED IN USER'S MANUAL OR IN 'config/config.rb'.
 
 CONFIG = {
 
